--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body>
+
+	<body class="font-inter antialiased">
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
