--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" href="/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
 
-	<body class="font-inter antialiased">
+	<body class="font-inter antialiased bg-background text-gray-100">
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
